--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,8 @@ on:
     branches:
       - master
 jobs:
-  osx_10_15:
-    runs-on: macos-10.15
+  osx:
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
       - name: Build
