--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -20,6 +20,7 @@ function(ADD_PAGMO_TESTCASE arg1)
     # Set the minimum C++ standard to C++17
     target_compile_features(${arg1} PRIVATE cxx_std_17)
     set_property(TARGET ${arg1} PROPERTY CXX_EXTENSIONS NO)
+    set_property(TARGET ${arg1} PROPERTY UNITY_BUILD OFF)
     target_compile_definitions(${arg1} PRIVATE BOOST_ALLOW_DEPRECATED_HEADERS)
     add_test(NAME ${arg1} COMMAND ${arg1})
 endfunction()
