--- a/pagmo-config.cmake.in
+++ b/pagmo-config.cmake.in
@@ -5,7 +5,7 @@ get_filename_component(_PAGMO_CONFIG_SELF_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
 set(_PAGMO_CONFIG_OLD_MODULE_PATH "${CMAKE_MODULE_PATH}")
 list(APPEND CMAKE_MODULE_PATH "${_PAGMO_CONFIG_SELF_DIR}")
 set(THREADS_PREFER_PTHREAD_FLAG YES)
-find_package(Threads REQUIRED)
+find_package(Threads QUIET REQUIRED)
 unset(THREADS_PREFER_PTHREAD_FLAG)
 include(PagmoFindBoost)
 @_PAGMO_CONFIG_OPTIONAL_DEPS@
