--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
         command: bash ./tools/circleci_focal_gcc9_asan.sh
   ubuntu_arm64:
     machine:
-      image: ubuntu-2004:202101-01
+      image: ubuntu-2204:2024.11.1
     resource_class: arm.medium
     steps:
     - checkout
